--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
   "devDependencies": {
-    "@ui5/cli": "^3.0.0",
-    "@sap/ux-ui5-tooling": "1",
-    "eslint": "8.57.0",
-    "@sap/eslint-plugin-ui5-jsdocs": "2.0.5",
-    "@sapui5/ts-types": "~1.130.0",
+    "@babel/eslint-parser": "7.14.7",
     "@sap-ux/eslint-plugin-fiori-tools": "^0.4.0",
+    "@sap/eslint-plugin-ui5-jsdocs": "2.0.5",
+    "@sap/ux-ui5-tooling": "1",
+    "@sapui5/ts-types": "~1.130.0",
+    "@ui5/cli": "^3.0.0",
+    "eslint": "8.57.0",
     "eslint-plugin-fiori-custom": "2.6.7",
-    "@babel/eslint-parser": "7.14.7"
+    "ui5-task-transpile": "^0.5.1"
   },
   "scripts": {
     "start": "fiori run --open \"index.html\" --port 8081",
