--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,28 +1,54 @@
 # yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
 
-###specVersion: "3.1"
+specVersion: "3.1"
 metadata:
   name: com.inv.sapfioriwebinversion
 type: application
+
 server:
   customMiddleware:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertError: false  # Permite ignorar errores de certificado
         ui5:
           path:
             - /resources
             - /test-resources
           url: https://ui5.sap.com
+
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
         port: 35729
         path: webapp
         delay: 300
+
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
         component: com.inv.sapfioriwebinversion
         ui5Theme: sap_horizon
+        editors:
+          rta: true
+
+framework:
+  name: SAPUI5
+  version: "1.108.0"  # Versión estable de SAP UI5
+  libraries:
+    - name: sap.m
+    - name: sap.ui.core
+    - name: sap.tnt
+    - name: sap.f
+
+resources:
+  configuration:
+    paths:
+      webapp: ./webapp
+
+builder:
+  customTasks:
+    - name: ui5-task-transpile
+      afterTask: replaceVersion
+      configuration:
+        removeConsoleStatements: true
